Update tailwind.config and index.html

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,7 @@
+/* Custom Fonts */
+@import url("https://fonts.googleapis.com/css2?family=Inter&family=Nunito&display=swap");
+
+/* Tailwind */
 @tailwind base;
 
 @tailwind components;
